--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/vendor/Zend"]
 	path = src/vendor/Zend
 	url = git://github.com/zendframework/zf2.git
+[submodule "src/vendor/php-github-api"]
+	path = src/vendor/php-github-api
+	url = git://github.com/ornicar/php-github-api.git
