Add Mongo, and start implementing validation - aborted due to Symfony bugs

--- a/api/config/config.yml
+++ b/api/config/config.yml
@@ -5,7 +5,9 @@ kernel.config:
     charset:             UTF-8
     error_handler_level: null
 
-web.config: ~
+web.config:
+    validation:
+        annotations: true
 
 web.templating:
     escaping:       htmlspecialchars
