--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-/front/config/config*_local.yml
-/front/cache/*
-/front/logs/*
-
-/api/config/config*_local.yml
-/api/cache/*
-/api/logs/*
+/s2b/config/config*_local.yml
+/s2b/cache/*
+/s2b/logs/*
 
 # external software files
 .DS_Store
