Add basic controllers, routes and views

--- a/s2b/config/routing.yml
+++ b/s2b/config/routing.yml
@@ -1,3 +1,2 @@
-homepage:
-    pattern:  /
-    defaults: { _controller: FrontBundle:Default:index }
+s2b:
+  resource: S2bBundle/Resources/config/routing.yml
