--- a/s2b/config/config.yml
+++ b/s2b/config/config.yml
@@ -15,6 +15,8 @@ web.templating:
 
 markdown.parser: ~      # Enable the parser service
 
+time.helper: ~      # Enable the time helper
+
 # doctrine.dbal:
 #     dbname:   xxxxxxxx
 #     user:     root
