Change syndication format to atom

--- a/src/Application/S2bBundle/Resources/config/routing.yml
+++ b/src/Application/S2bBundle/Resources/config/routing.yml
@@ -17,4 +17,4 @@ search:
 latest:
     pattern:        /latest.:_format
     defaults:       { _controller: S2bBundle:Bundle:listLatest }
-    requirements:   { _format: "(xml)" }
+    requirements:   { _format: "(atom)" }
