Minor routing change to prevent 403 errors on nginx (due to the bundles dir)

--- a/src/Application/S2bBundle/Resources/config/routing.yml
+++ b/src/Application/S2bBundle/Resources/config/routing.yml
@@ -3,11 +3,11 @@ homepage:
     defaults:       { _controller: S2bBundle:Main:index }
 
 bundle_list:
-    pattern:        /bundles/:sort
+    pattern:        /bundle/:sort
     defaults:       { _controller: S2bBundle:Bundle:listAll, sort: score }
 
 user_list:
-    pattern:        /developers
+    pattern:        /developer
     defaults:       { _controller: S2bBundle:User:listAll }
 
 search:
