Allow to add a Bundle by providing a GitHub repo url

--- a/src/Application/S2bBundle/Resources/config/routing.yml
+++ b/src/Application/S2bBundle/Resources/config/routing.yml
@@ -2,6 +2,10 @@ homepage:
     pattern:        /
     defaults:       { _controller: S2bBundle:Main:index }
 
+bundle_add:
+    pattern:        /bundle/add
+    defaults:       { _controller: S2bBundle:Bundle:add }
+
 bundle_list:
     pattern:        /bundle/:sort
     defaults:       { _controller: S2bBundle:Bundle:listAll, sort: score }
