--- a/s2b/config/config_test.yml
+++ b/s2b/config/config_test.yml
@@ -1,6 +1,18 @@
 imports:
     - { resource: config_dev.yml }
 
+doctrine_odm.mongodb:
+    default_document_manager: default
+    cache_driver:             array
+    auto_generate_proxy_classes: true
+    document_managers:
+        default:
+            connection: mongodb
+    connections:
+        mongodb:
+            server:           localhost
+            default_database: symfony2bundles
+
 zend.logger:
     priority: debug
 
