--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "src/vendor/Goutte"]
 	path = src/vendor/Goutte
 	url = git://github.com/fabpot/Goutte.git
+[submodule "src/vendor/Doctrine"]
+	path = src/vendor/Doctrine
+	url = git://github.com/doctrine/doctrine2.git
