--- a/s2b/config/config_dev_local.yml.dist
+++ b/s2b/config/config_dev_local.yml.dist
@@ -1,13 +1,12 @@
 imports:
     - { resource: config_dev.yml }
 
-doctrine_odm.mongodb:
-    default_document_manager: default
-    cache_driver:             array
-    document_managers:
-        default:
-            connection: mongodb
-    connections:
-        mongodb:
-            server:           localhost
-            default_database: symfony2bundles
+doctrine.dbal:
+  connections:
+    default:
+      driver:               PDOMySql
+      dbname:               symfony2bundles
+      user:                 root
+      password:             ~
+      host:                 localhost
+      port:                 ~
