--- a/s2b/config/config_test.yml
+++ b/s2b/config/config_test.yml
@@ -1,17 +1,15 @@
 imports:
     - { resource: config_dev.yml }
 
-doctrine_odm.mongodb:
-    default_document_manager: default
-    cache_driver:             array
-    auto_generate_proxy_classes: true
-    document_managers:
-        default:
-            connection: mongodb
-    connections:
-        mongodb:
-            server:           localhost
-            default_database: symfony2bundles
+doctrine.dbal:
+  connections:
+    default:
+      driver:               PDOMySql
+      dbname:               symfony2bundles_test
+      user:                 root
+      password:             m
+      host:                 localhost
+      port:                 ~
 
 zend.logger:
     priority: debug
