--- a/s2b/config/config_test.yml.dist
+++ b/s2b/config/config_test.yml.dist
@@ -5,8 +5,16 @@ doctrine.dbal:
   connections:
     default:
       driver:               PDOMySql
-      dbname:               symfony2bundles
+      dbname:               symfony2bundles_test
       user:                 root
-      password:             m
+      password:             ~
       host:                 localhost
       port:                 ~
+
+zend.logger:
+    priority: debug
+
+web.config:
+    toolbar: false
+
+kernel.test: ~
