Fix Doctrine config and autoloading

--- a/s2b/config/config_dev_local.yml.dist
+++ b/s2b/config/config_dev_local.yml.dist
@@ -6,7 +6,7 @@ doctrine.dbal:
     default:
       driver:               PDOMySql
       dbname:               symfony2bundles
-      user:                 root
+      user:                 ~
       password:             ~
       host:                 localhost
       port:                 ~
