--- a/s2b/config/config_prod_local.dist.yml
+++ b/s2b/config/config_prod_local.dist.yml
@@ -6,7 +6,7 @@ doctrine.dbal:
     default:
       driver:               PDOMySql
       dbname:               symfony2bundles
-      user:                 root
+      user:                 ~
       password:             ~
       host:                 localhost
       port:                 ~
