--- a/src/Application/S2bBundle/Resources/config/routing.yml
+++ b/src/Application/S2bBundle/Resources/config/routing.yml
@@ -13,7 +13,7 @@ search:
 
 latest:
     pattern:        /latest.:_format
-    defaults:       { _controller: S2bBundle:Bundle:listLatest }
+    defaults:       { _controller: S2bBundle:Repo:listLatest, class: Bundle }
     requirements:   { _format: "(atom)" }
 
 api:
@@ -22,12 +22,17 @@ api:
 
 bundle_list:
     pattern:        /bundle/:sort.:_format
-    defaults:       { _controller: S2bBundle:Bundle:listAll, sort: score, _format: html }
+    defaults:       { _controller: S2bBundle:Repo:list, class: Bundle, sort: score, _format: html }
+    requirements:   { _sort: "(score|name|createdAt|lastCommitAt)", _format: "(html|json|js)" }
+
+project_list:
+    pattern:        /project/:sort.:_format
+    defaults:       { _controller: S2bBundle:Repo:list, class: Project, sort: score, _format: html }
     requirements:   { _sort: "(score|name|createdAt|lastCommitAt)", _format: "(html|json|js)" }
 
 user_list:
     pattern:        /developer/:sort.:_format
-    defaults:       { _controller: S2bBundle:User:listAll, sort: name, _format: html }
+    defaults:       { _controller: S2bBundle:User:list, sort: name, _format: html }
     requirements:   { _sort: "(name)", _format: "(html|json|js)" }
 
 user_bundle_list:
@@ -35,9 +40,9 @@ user_bundle_list:
     defaults:       { _controller: S2bBundle:User:bundles }
     requirements:   { _format: "(json|js)" }
 
-bundle_show:
+repo_show:
     pattern:        /:username/:name.:_format
-    defaults:       { _controller: S2bBundle:Bundle:show, _format: html }
+    defaults:       { _controller: S2bBundle:Repo:show, _format: html }
     requirements:   { _format: "(html|json|js)" }
 
 user_show:
