--- a/src/Application/S2bBundle/Resources/config/routing.yml
+++ b/src/Application/S2bBundle/Resources/config/routing.yml
@@ -1,56 +1,59 @@
 homepage:
     pattern:        /
     defaults:       { _controller: S2bBundle:Main:index }
+    requirements:   { _method: "GET" }
 
 repo_add:
     pattern:        /repo/add
     defaults:       { _controller: S2bBundle:Repo:add }
+    requirements:   { _method: "POST" }
 
 search:
     pattern:        /search.:_format
     defaults:       { _controller: S2bBundle:Repo:search, _format: html }
-    requirements:   { _format: "(html|json|js)" }
+    requirements:   { _method: "GET", _format: "(html|json|js)" }
 
 latest:
     pattern:        /latest.:_format
     defaults:       { _controller: S2bBundle:Repo:listLatest, class: Bundle }
-    requirements:   { _format: "(atom)" }
+    requirements:   { _method: "GET", _format: "(atom)" }
 
 api:
     pattern:        /api
     defaults:       { _controller: S2bBundle:Main:api }
+    requirements:   { _method: "GET" }
 
 bundle_list:
     pattern:        /bundle/:sort.:_format
     defaults:       { _controller: S2bBundle:Repo:list, class: Bundle, sort: score, _format: html }
-    requirements:   { _sort: "(score|name|createdAt|lastCommitAt)", _format: "(html|json|js)" }
+    requirements:   { _method: "GET", _sort: "(score|name|createdAt|lastCommitAt)", _format: "(html|json|js)" }
 
 project_list:
     pattern:        /project/:sort.:_format
     defaults:       { _controller: S2bBundle:Repo:list, class: Project, sort: score, _format: html }
-    requirements:   { _sort: "(score|name|createdAt|lastCommitAt)", _format: "(html|json|js)" }
+    requirements:   { _method: "GET", _sort: "(score|name|createdAt|lastCommitAt)", _format: "(html|json|js)" }
 
 user_list:
     pattern:        /developer/:sort.:_format
     defaults:       { _controller: S2bBundle:User:list, sort: name, _format: html }
-    requirements:   { _sort: "(name)", _format: "(html|json|js)" }
+    requirements:   { _method: "GET", _sort: "(name)", _format: "(html|json|js)" }
 
 user_bundle_list:
     pattern:        /:name/bundles.:_format
     defaults:       { _controller: S2bBundle:User:bundles }
-    requirements:   { _format: "(json|js)" }
+    requirements:   { _method: "GET", _format: "(json|js)" }
 
 user_projects_list:
     pattern:        /:name/projects.:_format
     defaults:       { _controller: S2bBundle:User:projects }
-    requirements:   { _format: "(json|js)" }
+    requirements:   { _method: "GET", _format: "(json|js)" }
 
 repo_show:
     pattern:        /:username/:name.:_format
     defaults:       { _controller: S2bBundle:Repo:show, _format: html }
-    requirements:   { _format: "(html|json|js)" }
+    requirements:   { _method: "GET", _format: "(html|json|js)" }
 
 user_show:
     pattern:        /:name.:_format
     defaults:       { _controller: S2bBundle:User:show, _format: html }
-    requirements:   { _format: "(html|json|js)" }
+    requirements:   { _method: "GET", _format: "(html|json|js)" }
