Upgrade Kernel and config to latest Symfony2 style

--- a/s2b/config/config.yml
+++ b/s2b/config/config.yml
@@ -8,6 +8,7 @@ kernel.config:
 web.config:
     validation:
         enabled: true
+    router: { resource: "%kernel.root_dir%/config/routing.yml" }
 
 web.templating:
     escaping:       htmlspecialchars
