--- a/.gitmodules
+++ b/.gitmodules
@@ -15,7 +15,7 @@
 	url = git://github.com/ornicar/GravatarBundle.git
 [submodule "src/vendor/Goutte"]
 	path = src/vendor/Goutte
-	url = git://github.com/fabpot/Goutte.git
+	url = git://github.com/ornicar/Goutte.git
 [submodule "src/vendor/Doctrine"]
 	path = src/vendor/Doctrine
 	url = git://github.com/doctrine/doctrine2.git
