Make MainMenu a service

--- a/s2b/config/config.yml
+++ b/s2b/config/config.yml
@@ -17,6 +17,10 @@ markdown.parser: ~      # Enable the parser service
 
 time.helper: ~      # Enable the time helper
 
+menu.templating: ~
+
+s2b.config: ~
+
 doctrine.orm:
   default_entity_manager:   default
   cache_driver:             apc           # array, apc, memcache, xcache
