--- a/s2b/config/config_prod_local.dist.yml
+++ b/s2b/config/config_prod_local.dist.yml
@@ -2,6 +2,7 @@ imports:
     - { resource: config.yml }
 
 doctrine.dbal:
+  default_connection:       default
   connections:
     default:
       driver:               PDOMySql
