--- a/s2b/config/config_test.yml.dist
+++ b/s2b/config/config_test.yml.dist
@@ -2,6 +2,7 @@ imports:
     - { resource: config_dev.yml }
 
 doctrine.dbal:
+  default_connection:       default
   connections:
     default:
       driver:               PDOMySql
