--- a/s2b/config/config_dev.yml
+++ b/s2b/config/config_dev.yml
@@ -6,4 +6,8 @@ zend.logger:
     path:     %kernel.logs_dir%/%kernel.environment%.log
 
 web.config:
+    profiler: { only_exceptions: false }
+
+webprofiler.config:
     toolbar: true
+    intercept_redirects: true
