--- a/s2b/config/config_prod_local.dist.yml
+++ b/s2b/config/config_prod_local.dist.yml
@@ -1,5 +1,5 @@
 imports:
-    - { resource: config.yml }
+    - { resource: config_prod.yml }
 
 doctrine.dbal:
   default_connection:       default
