--- a/s2b/config/config.yml
+++ b/s2b/config/config.yml
@@ -22,6 +22,9 @@ gravatar.config: ~
 
 s2b.config: ~
 
+offline.config:
+    enable: true
+
 doctrine.orm:
   default_entity_manager:   default
   cache_driver:             apc           # array, apc, memcache, xcache
