--- a/s2b/config/config_dev.yml
+++ b/s2b/config/config_dev.yml
@@ -1,13 +1,15 @@
 imports:
     - { resource: config.yml }
 
-zend.logger:
-    priority: notice
-    path:     %kernel.logs_dir%/%kernel.environment%.log
+zend.config:
+    loader:
+        priority: notice
+        path:     %kernel.logs_dir%/%kernel.environment%.log
 
-web.config:
-    profiler: { only_exceptions: false }
+app.config:
     router:   { resource: "%kernel.root_dir%/config/routing_dev.yml" }
+    profiler:
+        only_exceptions: false
 
 webprofiler.config:
     toolbar: true
