--- a/s2b/config/config_dev.yml
+++ b/s2b/config/config_dev.yml
@@ -5,6 +5,8 @@ zend.config:
     loader:
         priority: notice
         path:     %kernel.logs_dir%/%kernel.environment%.log
+    logger:
+        path:     %kernel.logs_dir%/%kernel.environment%.log
 
 app.config:
     router:   { resource: "%kernel.root_dir%/config/routing_dev.yml" }
