--- a/s2b/config/routing_dev.yml
+++ b/s2b/config/routing_dev.yml
@@ -1,5 +1,5 @@
 _profiler:
-  resource: WebProfilerBundle/Resources/config/routing/profiler.xml
+  resource: @WebProfilerBundle/Resources/config/routing/profiler.xml
   prefix:   /_profiler
 
 _main:
