--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -56,4 +56,4 @@ doctrine:
         entity_managers:
             default:
                 mappings:
-                  KnplabsSymfony2Bundles: ~
+                  KnplabsSymfony2BundlesBundle: ~
