--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "vendor/bundles/Knplabs/Bundle/PaginatorBundle"]
 	path = vendor/bundles/Knplabs/Bundle/PaginatorBundle
 	url = git://github.com/knplabs/PaginatorBundle.git
+[submodule "vendor/monolog"]
+	path = vendor/monolog
+	url = git://github.com/Seldaek/monolog.git
