--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -13,7 +13,7 @@
 >
   <testsuites>
       <testsuite name="Project Test Suite">
-          <directory>../src/*/*Bundle/Tests</directory>
+          <directory>../src/*/*/*Bundle/Tests</directory>
       </testsuite>
   </testsuites>
 
@@ -27,8 +27,8 @@
       <whitelist>
           <directory>../src</directory>
           <exclude>
-              <directory>../src/*/*Bundle/Resources</directory>
-              <directory>../src/*/*Bundle/Tests</directory>
+              <directory>../src/*/*/*Bundle/Resources</directory>
+              <directory>../src/*/*/*Bundle/Tests</directory>
           </exclude>
       </whitelist>
   </filter>
