--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -17,11 +17,10 @@
       </testsuite>
   </testsuites>
 
-  <!--
   <php>
-      <server name="KERNEL_DIR" value="/path/to/your/app/" />
+      <!--<server name="KERNEL_DIR" value="/path/to/your/app/" />-->
+      <server name="GIT_BIN" value="/usr/bin/git" />
   </php>
-  //-->
 
   <filter>
       <whitelist>
